[gd_scene load_steps=12 format=2]

[ext_resource path="res://Scenes/Player/Player.tscn" type="PackedScene" id=1]
[ext_resource path="res://Scenes/World/TileMap.tscn" type="PackedScene" id=2]
[ext_resource path="res://Scenes/Enemy/Enemy.tscn" type="PackedScene" id=3]
[ext_resource path="res://Scenes/World/Misc/Gem.tscn" type="PackedScene" id=4]
[ext_resource path="res://Scenes/World/Misc/Portal.tscn" type="PackedScene" id=5]
[ext_resource path="res://Scenes/User_Interface/MainMenu.tscn" type="PackedScene" id=6]
[ext_resource path="res://fonts/SourceCodePro-Bold.ttf" type="DynamicFontData" id=7]
[ext_resource path="res://Scripts/UI/Tutorial.gd" type="Script" id=8]
[ext_resource path="res://Scenes/World/TileMap_details.tscn" type="PackedScene" id=9]

[sub_resource type="DynamicFont" id=1]
size = 25
outline_size = 1
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 7 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 192, 10 )

[node name="Tutorial" type="Node2D"]
script = ExtResource( 8 )

[node name="TileMap" parent="." instance=ExtResource( 2 )]
position = Vector2( 0, 464 )
tile_data = PoolIntArray( -655361, 12, 1, -720896, 5, 0, -720895, 5, 0, -720894, 5, 0, -720893, 5, 0, -720892, 5, 0, -720891, 5, 0, -720890, 5, 0, -720889, 5, 0, -720888, 5, 0, -720887, 5, 0, -720886, 5, 0, -720885, 5, 0, -720884, 5, 0, -720883, 5, 0, -720882, 5, 0, -720881, 5, 0, -720880, 5, 0, -720879, 5, 0, -720878, 5, 0, -720877, 5, 0, -720876, 5, 0, -720875, 5, 0, -720874, 5, 0, -720873, 5, 0, -720872, 5, 0, -720871, 5, 0, -720870, 5, 0, -720869, 5, 0, -720868, 5, 0, -720867, 5, 0, -720866, 5, 0, -720865, 5, 0, -720864, 5, 0, -720863, 5, 0, -720862, 5, 0, -720861, 5, 0, -720860, 5, 0, -720859, 5, 0, -720858, 5, 0, -720857, 5, 0, -720856, 5, 0, -720855, 5, 0, -720854, 5, 0, -720853, 5, 0, -720852, 5, 0, -720851, 5, 0, -720850, 5, 0, -720849, 5, 0, -720848, 5, 0, -720847, 5, 0, -720846, 5, 0, -720845, 5, 0, -720844, 5, 0, -720843, 5, 0, -720842, 5, 0, -720841, 5, 0, -720840, 5, 0, -720839, 5, 0, -720838, 5, 0, -720837, 5, 0, -720836, 5, 0, -720835, 5, 0, -720834, 5, 0, -720833, 5, 0, -720832, 5, 0, -720831, 5, 0, -720830, 5, 0, -720829, 5, 0, -720828, 5, 0, -720827, 5, 0, -720826, 5, 0, -720825, 5, 0, -720824, 5, 0, -720823, 5, 0, -720822, 5, 0, -720821, 5, 0, -720820, 5, 0, -720819, 5, 0, -720818, 5, 0, -720817, 5, 0, -720816, 5, 0, -720815, 5, 0, -720814, 5, 0, -720813, 5, 0, -720812, 5, 0, -720811, 5, 0, -720810, 5, 0, -720809, 5, 0, -720808, 5, 0, -720807, 5, 0, -720806, 5, 0, -720805, 5, 0, -720804, 5, 0, -720803, 5, 0, -720802, 5, 0, -720801, 5, 0, -720800, 5, 0, -720799, 5, 0, -720798, 5, 0, -720797, 5, 0, -720796, 5, 0, -720795, 5, 0, -720794, 5, 0, -720793, 5, 0, -720792, 5, 0, -720791, 5, 0, -720790, 5, 0, -720789, 5, 0, -720788, 5, 0, -720787, 5, 0, -720786, 5, 0, -720785, 5, 0, -720784, 5, 0, -720783, 5, 0, -720782, 5, 0, -720781, 5, 0, -720780, 5, 0, -720779, 5, 0, -720778, 5, 0, -720777, 5, 0, -720776, 5, 0, -720775, 5, 0, -720774, 5, 0, -720773, 5, 0, -720772, 5, 0, -720771, 5, 0, -589825, 12, 1, -655360, 7, 0, -655359, 7, 0, -655358, 7, 0, -655357, 7, 0, -655356, 7, 0, -655355, 7, 0, -655354, 7, 0, -655353, 7, 0, -655352, 7, 0, -655351, 7, 0, -655350, 7, 0, -655349, 12, 1, -655311, 12, 0, -655310, 7, 0, -655309, 7, 0, -655308, 7, 0, -655307, 7, 0, -655306, 7, 0, -655305, 7, 0, -655304, 7, 0, -655303, 7, 0, -655302, 7, 0, -655301, 7, 0, -655300, 7, 0, -655299, 7, 0, -655298, 7, 0, -655297, 7, 0, -655296, 7, 0, -655295, 7, 0, -655294, 7, 0, -655293, 7, 0, -655292, 7, 0, -655291, 7, 0, -655290, 7, 0, -655289, 7, 0, -655288, 7, 0, -655287, 7, 0, -655286, 7, 0, -655285, 7, 0, -655284, 7, 0, -655283, 12, 1, -655249, 12, 0, -655248, 7, 0, -655247, 7, 0, -655246, 7, 0, -655245, 7, 0, -655244, 7, 0, -655243, 7, 0, -655242, 7, 0, -655241, 7, 0, -655240, 7, 0, -655239, 7, 0, -655238, 7, 0, -655237, 7, 0, -655236, 7, 0, -655235, 12, 0, -524289, 12, 1, -589824, 7, 0, -589823, 7, 0, -589822, 7, 0, -589821, 7, 0, -589820, 7, 0, -589819, 7, 0, -589818, 7, 0, -589817, 7, 0, -589816, 7, 0, -589815, 7, 0, -589814, 7, 0, -589813, 12, 1, -589775, 12, 0, -589774, 7, 0, -589773, 7, 0, -589772, 7, 0, -589771, 7, 0, -589770, 7, 0, -589769, 7, 0, -589768, 7, 0, -589767, 7, 0, -589766, 7, 0, -589765, 7, 0, -589764, 7, 0, -589763, 7, 0, -589762, 7, 0, -589761, 7, 0, -589760, 7, 0, -589759, 7, 0, -589758, 7, 0, -589757, 7, 0, -589756, 7, 0, -589755, 7, 0, -589754, 7, 0, -589753, 7, 0, -589752, 7, 0, -589751, 7, 0, -589750, 7, 0, -589749, 7, 0, -589748, 7, 0, -589747, 12, 1, -589713, 12, 0, -589712, 7, 0, -589711, 7, 0, -589710, 7, 0, -589709, 7, 0, -589708, 7, 0, -589707, 7, 0, -589706, 7, 0, -589705, 7, 0, -589704, 7, 0, -589703, 7, 0, -589702, 7, 0, -589701, 7, 0, -589700, 7, 0, -589699, 12, 0, -458753, 12, 1, -524288, 7, 0, -524287, 7, 0, -524286, 7, 0, -524285, 7, 0, -524284, 7, 0, -524283, 7, 0, -524282, 7, 0, -524281, 7, 0, -524280, 7, 0, -524279, 7, 0, -524278, 7, 0, -524277, 12, 1, -524239, 6, 1, -524238, 5, 0, -524237, 5, 1, -524236, 5, 0, -524235, 5, 0, -524234, 5, 1, -524233, 5, 1, -524232, 5, 0, -524231, 5, 1, -524230, 5, 0, -524229, 5, 0, -524228, 5, 0, -524227, 13, 3, -524226, 13, 4, -524225, 13, 5, -524224, 7, 0, -524223, 7, 0, -524222, 7, 0, -524221, 7, 0, -524220, 7, 0, -524219, 7, 0, -524218, 7, 0, -524217, 7, 0, -524216, 7, 0, -524215, 7, 0, -524214, 7, 0, -524213, 7, 0, -524212, 7, 0, -524211, 12, 1, -524177, 12, 0, -524176, 7, 0, -524175, 7, 0, -524174, 7, 0, -524173, 7, 0, -524172, 7, 0, -524171, 7, 0, -524170, 7, 0, -524169, 7, 0, -524168, 7, 0, -524167, 7, 0, -524166, 7, 0, -524165, 7, 0, -524164, 7, 0, -524163, 12, 0, -393217, 12, 1, -458752, 7, 0, -458751, 7, 0, -458750, 7, 0, -458749, 7, 0, -458748, 7, 0, -458747, 7, 0, -458746, 7, 0, -458745, 7, 0, -458744, 7, 0, -458743, 7, 0, -458742, 7, 0, -458741, 12, 1, -458691, 13, 65539, -458690, 13, 65540, -458689, 13, 65541, -458688, 5, 0, -458687, 5, 0, -458686, 5, 0, -458685, 5, 0, -458684, 5, 1, -458683, 5, 0, -458682, 5, 1, -458681, 5, 0, -458680, 5, 1, -458679, 5, 1, -458678, 5, 1, -458677, 5, 1, -458676, 5, 0, -458675, 6, 0, -458641, 6, 1, -458640, 5, 0, -458639, 5, 0, -458638, 5, 0, -458637, 5, 1, -458636, 13, 3, -458635, 13, 4, -458634, 13, 5, -458633, 7, 0, -458632, 7, 0, -458631, 7, 0, -458630, 7, 0, -458629, 7, 0, -458628, 7, 0, -458627, 12, 0, -327681, 12, 1, -393216, 7, 0, -393215, 7, 0, -393214, 7, 0, -393213, 7, 0, -393212, 7, 0, -393211, 7, 0, -393210, 7, 0, -393209, 7, 0, -393208, 7, 0, -393207, 7, 0, -393206, 7, 0, -393205, 12, 1, -393100, 13, 65539, -393099, 13, 65540, -393098, 13, 65541, -393097, 13, 3, -393096, 13, 4, -393095, 13, 5, -393094, 7, 0, -393093, 7, 0, -393092, 7, 0, -393091, 12, 0, -262145, 12, 1, -327680, 7, 0, -327679, 7, 0, -327678, 7, 0, -327677, 7, 0, -327676, 7, 0, -327675, 7, 0, -327674, 7, 0, -327673, 7, 0, -327672, 7, 0, -327671, 7, 0, -327670, 7, 0, -327669, 12, 1, -327561, 13, 65539, -327560, 13, 65540, -327559, 13, 65541, -327558, 5, 0, -327557, 5, 0, -327556, 5, 0, -327555, 12, 0, -196609, 12, 1, -262144, 7, 0, -262143, 7, 0, -262142, 7, 0, -262141, 7, 0, -262140, 7, 0, -262139, 7, 0, -262138, 7, 0, -262137, 7, 0, -262136, 7, 0, -262135, 7, 0, -262134, 7, 0, -262133, 12, 1, -262045, 3, 0, -262044, 3, 2, -262019, 12, 0, -131073, 12, 1, -196608, 7, 0, -196607, 7, 0, -196606, 7, 0, -196605, 7, 0, -196604, 7, 0, -196603, 7, 0, -196602, 7, 0, -196601, 7, 0, -196600, 13, 0, -196599, 13, 1, -196598, 13, 2, -196597, 6, 0, -196509, 3, 131072, -196508, 3, 131074, -196483, 12, 0, -65537, 12, 1, -131072, 13, 0, -131071, 13, 1, -131070, 13, 2, -131069, 5, 0, -131068, 5, 1, -131067, 5, 0, -131066, 5, 1, -131065, 5, 0, -131064, 13, 65536, -131063, 13, 65537, -131062, 13, 65538, -130974, 9, 0, -130973, 19, 2, -130972, 19, 0, -130971, 19, 2, -130970, 19, 2, -130969, 19, 0, -130968, 9, 1, -130947, 12, 0, -1, 12, 1, -65536, 13, 65536, -65535, 13, 65537, -65534, 13, 65538, -65411, 12, 0, 65535, 12, 1, 32, 17, 0, 33, 19, 0, 34, 19, 1, 35, 19, 0, 36, 19, 4, 37, 19, 4, 38, 19, 1, 39, 19, 2, 40, 19, 0, 41, 19, 2, 42, 19, 0, 43, 19, 0, 44, 19, 1, 45, 19, 0, 46, 19, 1, 47, 19, 1, 48, 19, 3, 49, 19, 2, 50, 19, 4, 51, 17, 2, 107, 18, 0, 108, 18, 1, 109, 18, 1, 110, 18, 2, 125, 12, 0, 131071, 12, 1, 65558, 9, 0, 65559, 19, 0, 65560, 19, 3, 65561, 19, 0, 65562, 19, 3, 65563, 19, 2, 65564, 9, 1, 65661, 12, 0, 196607, 12, 1, 131184, 11, 0, 131185, 11, 1, 131186, 11, 1, 131187, 11, 2, 131197, 12, 0, 262143, 12, 1, 196622, 10, 0, 196623, 10, 1, 196624, 10, 1, 196625, 10, 1, 196626, 10, 2, 196733, 12, 0, 327679, 12, 1, 262165, 18, 0, 262166, 18, 1, 262167, 18, 2, 262262, 3, 0, 262263, 3, 1, 262264, 3, 2, 262269, 12, 0, 393215, 12, 1, 327688, 9, 0, 327689, 19, 2, 327690, 19, 2, 327691, 9, 1, 327798, 3, 131072, 327799, 3, 131073, 327800, 3, 131074, 327805, 12, 0, 458751, 12, 1, 393240, 3, 0, 393241, 3, 1, 393242, 3, 2, 393327, 9, 0, 393328, 19, 0, 393329, 19, 2, 393330, 19, 4, 393331, 19, 3, 393332, 19, 0, 393333, 19, 3, 393334, 19, 2, 393335, 19, 2, 393336, 19, 0, 393337, 9, 1, 393341, 12, 0, 524287, 12, 1, 458767, 18, 0, 458768, 18, 1, 458769, 18, 1, 458770, 18, 2, 458776, 3, 65536, 458777, 3, 65537, 458778, 3, 65538, 458782, 9, 0, 458783, 9, 1, 458854, 10, 0, 458855, 10, 1, 458856, 10, 1, 458857, 10, 1, 458858, 10, 1, 458859, 10, 2, 458877, 12, 0, 589823, 12, 1, 524312, 3, 131072, 524313, 3, 131073, 524314, 3, 131074, 524338, 9, 0, 524339, 19, 2, 524340, 19, 3, 524341, 19, 0, 524342, 19, 0, 524343, 19, 2, 524344, 19, 2, 524345, 9, 1, 524382, 22, 0, 524385, 19, 3, 524386, 9, 1, 524413, 12, 0, 655359, 12, 1, 589845, 9, 0, 589846, 19, 4, 589847, 19, 1, 589848, 19, 2, 589849, 19, 3, 589850, 19, 4, 589851, 9, 1, 589916, 9, 0, 589917, 19, 0, 589949, 12, 0, 720895, 12, 1, 655446, 3, 0, 655447, 3, 2, 655485, 12, 0, 786431, 12, 1, 720912, 10, 0, 720913, 10, 1, 720914, 10, 2, 720982, 3, 131072, 720983, 3, 131074, 721021, 12, 0, 851967, 12, 1, 786442, 3, 0, 786443, 3, 1, 786444, 3, 2, 786474, 10, 0, 786475, 10, 1, 786476, 10, 1, 786477, 10, 1, 786478, 10, 1, 786479, 10, 1, 786480, 10, 2, 786510, 2, 0, 786513, 19, 3, 786514, 19, 0, 786515, 19, 0, 786516, 19, 1, 786517, 19, 2, 786518, 19, 3, 786519, 14, 0, 786557, 12, 0, 917503, 12, 1, 851968, 20, 0, 851978, 3, 131072, 851979, 3, 131073, 851980, 3, 131074, 852042, 15, 0, 852043, 19, 3, 852044, 19, 2, 852045, 19, 1, 852049, 7, 0, 852050, 7, 0, 852051, 7, 0, 852052, 7, 0, 852053, 7, 0, 852054, 7, 0, 852055, 12, 1, 852093, 12, 0, 983039, 12, 1, 917507, 19, 0, 917508, 19, 2, 917509, 19, 0, 917510, 19, 0, 917511, 19, 3, 917512, 19, 3, 917513, 19, 2, 917514, 19, 4, 917515, 19, 3, 917516, 19, 1, 917517, 19, 0, 917518, 14, 0, 917556, 18, 0, 917557, 18, 1, 917558, 18, 2, 917564, 17, 0, 917565, 17, 2, 917572, 11, 0, 917573, 11, 1, 917574, 11, 2, 917578, 12, 0, 917579, 7, 0, 917580, 7, 0, 917581, 7, 0, 917582, 7, 0, 917583, 7, 0, 917584, 7, 0, 917585, 7, 0, 917586, 7, 0, 917587, 7, 0, 917588, 7, 0, 917589, 7, 0, 917590, 7, 0, 917591, 12, 1, 917629, 12, 0, 1048575, 12, 1, 983040, 7, 0, 983041, 7, 0, 983042, 7, 0, 983043, 7, 0, 983044, 7, 0, 983045, 7, 0, 983046, 7, 0, 983047, 7, 0, 983048, 7, 0, 983049, 7, 0, 983050, 7, 0, 983051, 7, 0, 983052, 7, 0, 983053, 7, 0, 983054, 12, 1, 983099, 15, 0, 983100, 19, 3, 983101, 19, 0, 983102, 19, 1, 983103, 19, 2, 983104, 19, 1, 983105, 19, 0, 983106, 19, 1, 983107, 19, 2, 983108, 19, 2, 983109, 19, 2, 983110, 14, 0, 983114, 12, 0, 983115, 7, 0, 983116, 7, 0, 983117, 7, 0, 983118, 7, 0, 983119, 7, 0, 983120, 7, 0, 983121, 7, 0, 983122, 7, 0, 983123, 7, 0, 983124, 7, 0, 983125, 7, 0, 983126, 7, 0, 983127, 12, 1, 983165, 12, 0, 1114111, 12, 1, 1048576, 7, 0, 1048577, 7, 0, 1048578, 7, 0, 1048579, 7, 0, 1048580, 7, 0, 1048581, 7, 0, 1048582, 7, 0, 1048583, 7, 0, 1048584, 7, 0, 1048585, 7, 0, 1048586, 7, 0, 1048587, 7, 0, 1048588, 7, 0, 1048589, 7, 0, 1048590, 12, 1, 1048635, 12, 0, 1048636, 7, 0, 1048637, 7, 0, 1048638, 7, 0, 1048639, 7, 0, 1048640, 7, 0, 1048641, 7, 0, 1048642, 7, 0, 1048643, 7, 0, 1048644, 7, 0, 1048645, 7, 0, 1048646, 12, 1, 1048650, 12, 0, 1048651, 7, 0, 1048652, 7, 0, 1048653, 7, 0, 1048654, 7, 0, 1048655, 7, 0, 1048656, 7, 0, 1048657, 7, 0, 1048658, 7, 0, 1048659, 7, 0, 1048660, 7, 0, 1048661, 7, 0, 1048662, 7, 0, 1048663, 12, 1, 1048701, 12, 0, 1114171, 12, 0, 1114172, 7, 0, 1114173, 7, 0, 1114174, 7, 0, 1114175, 7, 0, 1114176, 7, 0, 1114177, 7, 0, 1114178, 7, 0, 1114179, 7, 0, 1114180, 7, 0, 1114181, 7, 0, 1114182, 12, 1, 1114186, 12, 0, 1114187, 7, 0, 1114188, 7, 0, 1114189, 7, 0, 1114190, 7, 0, 1114191, 7, 0, 1114192, 7, 0, 1114193, 7, 0, 1114194, 7, 0, 1114195, 7, 0, 1114196, 7, 0, 1114197, 7, 0, 1114198, 7, 0, 1114199, 12, 1 )

[node name="Details" parent="." instance=ExtResource( 9 )]
z_as_relative = false
collision_layer = 0
tile_data = PoolIntArray( 4195542, 20, 0, 4326608, 20, 0, 4523225, 20, 0, 4654287, 20, 4, 4850905, 20, 3, 4981972, 9, 1, 5571743, 8, 1, 5702848, 21, 1, 5965026, 22, 0, 6619612, 10, 1, 6685289, 5, 0, 6816352, 4, 0, 7209373, 17, 0, 7209391, 7, 0, 7209477, 7, 1, 7340294, 10, 1, 7471506, 22, 0, 7471519, 22, 1, 7471555, 22, 2, 7471588, 22, 0, 7471611, 22, 0, 7471632, 22, 1, 7471664, 22, 0, 7471684, 22, 1, 7471699, 22, 0, 7471702, 22, 1, 7471704, 22, 2, 7537133, 22, 1, 7537186, 22, 1, 7865612, 22, 0, 7995670, 17, 0, 7996714, 22, 0, 7996715, 22, 0, 8257873, 22, 2, 8323360, 22, 2, 9241944, 22, 0, 9241945, 22, 0, 9307463, 22, 1, 9307497, 22, 1, 9896108, 16, 0, 10027177, 22, 2, 10027225, 22, 1, 10092738, 22, 2, 10552741, 22, 1, 10618253, 22, 1, 10748000, 1, 0, 11075837, 22, 2, 11075849, 22, 1, 11141395, 22, 1, 11141403, 22, 2, 11206779, 16, 0, 11339158, 10, 0, 11403381, 22, 2, 11403399, 22, 1, 11404715, 10, 1, 11469107, 10, 1, 11535776, 4, 1, 11993758, 20, 1, 12189989, 22, 2, 12190011, 22, 1, 12190362, 20, 1, 12191032, 22, 1, 12191080, 22, 2, 12191116, 22, 2, 12256580, 22, 2, 12256595, 22, 1, 12256596, 22, 1, 12256635, 22, 1, 12321443, 20, 1, 12518042, 20, 4, 12584187, 1, 0, 12714665, 20, 3, 12779708, 4, 1, 12779740, 1, 0, 12779894, 21, 0, 12780191, 9, 1, 12846333, 12, 0, 12976491, 22, 0, 12976495, 22, 2, 12976728, 5, 0, 13042034, 22, 0, 13108442, 22, 0, 13173913, 1, 0, 13173962, 22, 0, 13174023, 22, 2, 13304953, 10, 1, 13369983, 8, 1, 13435082, 22, 2, 13435099, 22, 2, 13566627, 16, 0, 13567128, 13, 0, 13697646, 22, 2, 13697708, 22, 1, 13763168, 22, 0, 13763189, 22, 1, 13763198, 22, 2, 13763213, 22, 0, 13763225, 22, 2, 13763236, 22, 2, 13763249, 22, 0, 13763691, 1, 0, 13763723, 22, 2, 13959476, 3, 0, 14222456, 22, 2, 14287147, 7, 1, 14352688, 21, 1, 14549321, 22, 2, 14550108, 22, 0, 14615644, 22, 0, 15138915, 20, 0, 15204449, 20, 1, 15269980, 20, 0, 15335529, 20, 0, 15532123, 20, 0, 15597668, 20, 0, 15990877, 20, 4, 15990879, 9, 4, 16057294, 10, 0, 16057335, 10, 1, 16122906, 5, 0, 16318550, 20, 2, 16318565, 20, 3, 16318665, 22, 2, 16384082, 20, 2, 16384107, 20, 3, 16384223, 22, 2, 16449639, 20, 3, 16515158, 20, 2, 16515580, 3, 0, 16581637, 15, 0, 16647167, 18, 0, 16711776, 9, 3, 16712194, 12, 0, 16843676, 10, 0, 16908857, 21, 0, 17039880, 22, 0, 17105000, 20, 1, 17105443, 22, 0, 17170939, 22, 2, 17171015, 22, 2, 17498131, 10, 1, 17498208, 9, 2, 17694892, 5, 0, 17825907, 2, 0, 17892140, 10, 1, 18088045, 12, 0, 18153506, 7, 0, 18153626, 17, 0, 18219065, 21, 1, 18285168, 2, 0, 18481240, 22, 2, 18481254, 22, 2, 18481308, 22, 2, 18481318, 22, 2, 18546796, 22, 2, 18612335, 22, 2, 18612960, 3, 0, 18940558, 22, 1, 18940647, 17, 0 )

[node name="Player" parent="." instance=ExtResource( 1 )]
position = Vector2( 56, 1048 )

[node name="Portal" parent="." instance=ExtResource( 5 )]
position = Vector2( 4000, 896 )
next_scene = ExtResource( 6 )

[node name="Enemies" type="Node2D" parent="."]

[node name="Enemy" parent="Enemies" instance=ExtResource( 3 )]
position = Vector2( 2032, 416 )
lives = 40.0
damage = 9.0

[node name="Enemy2" parent="Enemies" instance=ExtResource( 3 )]
position = Vector2( 5616, 712 )
lives = 40.0
damage = 5.0

[node name="Gems" type="Node2D" parent="."]

[node name="Gem" parent="Gems" instance=ExtResource( 4 )]
position = Vector2( 3096, 1136 )

[node name="Gem2" parent="Gems" instance=ExtResource( 4 )]
position = Vector2( 4800, 224 )

[node name="Begining" type="Node2D" parent="."]

[node name="Start" type="RichTextLabel" parent="Begining"]
margin_left = 19.0
margin_top = 696.0
margin_right = 393.0
margin_bottom = 1032.0
custom_fonts/normal_font = SubResource( 1 )
text = "This is you, the player. You can move with either WAD or arrows, attack with the space bar and pause with ESC. You can also press CTRL to lock your rotation for combat advantage or sick looking moonwalk!"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Void" type="RichTextLabel" parent="Begining"]
margin_left = 736.0
margin_top = 1120.0
margin_right = 1096.0
margin_bottom = 1354.0
custom_fonts/normal_font = SubResource( 1 )
text = "This is a bottomless pit, you should try to avoid falling into it."
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Gems_label" type="RichTextLabel" parent="Begining"]
margin_left = 1032.0
margin_top = 472.0
margin_right = 1536.0
margin_bottom = 682.0
custom_fonts/normal_font = SubResource( 1 )
text = "Your gem collecting progress is displayed  here."
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Lives" type="RichTextLabel" parent="Begining"]
margin_left = 24.0
margin_top = 480.0
margin_right = 382.0
margin_bottom = 690.0
custom_fonts/normal_font = SubResource( 1 )
text = "Here you can  see your current lives."
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Enemy" type="Node2D" parent="."]
visible = false

[node name="Enemy" type="RichTextLabel" parent="Enemy"]
margin_left = 1176.0
margin_top = 168.0
margin_right = 1606.0
margin_bottom = 480.0
custom_fonts/normal_font = SubResource( 1 )
text = "This is your enemy. You need to kill all of them before you can go through the portal to the next level. His current lives are displayed above his head alongside his attitude."
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Fall_damage" type="RichTextLabel" parent="Enemy"]
margin_left = 624.0
margin_top = 208.0
margin_right = 982.0
margin_bottom = 418.0
custom_fonts/normal_font = SubResource( 1 )
text = "You are at a quite height there. Be careful as if you fall, you will take fall damage or even die!"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Lock" type="RichTextLabel" parent="."]
visible = false
margin_left = 1672.0
margin_top = 168.0
margin_right = 2096.0
margin_bottom = 368.0
custom_fonts/normal_font = SubResource( 1 )
text = "Now it's time to try out that lock option I told you about earlier. Press CTRL and get ready to fight!"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Fall" type="Node2D" parent="."]
visible = false

[node name="Fall" type="RichTextLabel" parent="Fall"]
margin_left = 2040.0
margin_top = 576.0
margin_right = 2464.0
margin_bottom = 776.0
custom_fonts/normal_font = SubResource( 1 )
text = "Ouch, that hurt! This is the smallest height from which you will take fall damage. If you see anything closer than that, feel free to jump! "
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Gem" type="RichTextLabel" parent="Fall"]
margin_left = 2624.0
margin_top = 935.0
margin_right = 3048.0
margin_bottom = 1135.0
custom_fonts/normal_font = SubResource( 1 )
text = "See that gem? If you pick it up, it will restore some of your lost lives. If you pick up all of the gems at a certain level, you will gain a permanent bonus life."
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Portal_label" type="RichTextLabel" parent="."]
visible = false
margin_left = 3384.0
margin_top = 792.0
margin_right = 3808.0
margin_bottom = 1032.0
custom_fonts/normal_font = SubResource( 1 )
text = "There is the portal into the next level. But it does not spin or make any sound. That means it's inactive. You need to kill all the enemies before the portal becomes active."
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Portal_label2" type="RichTextLabel" parent="."]
margin_left = 3456.0
margin_top = 608.0
margin_right = 3880.0
margin_bottom = 912.0
custom_fonts/normal_font = SubResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label_cleaner" type="Area2D" parent="."]
position = Vector2( 1064, 888 )
collision_layer = 0

[node name="Area" type="CollisionShape2D" parent="Label_cleaner"]
position = Vector2( 112, 0 )
shape = SubResource( 2 )

[node name="Label_cleaner2" type="Area2D" parent="."]
position = Vector2( 1592, 448 )
collision_layer = 0

[node name="Area" type="CollisionShape2D" parent="Label_cleaner2"]
position = Vector2( 112, 0 )
shape = SubResource( 2 )

[node name="Label_cleaner3" type="Area2D" parent="."]
position = Vector2( 2464, 832 )
collision_layer = 0

[node name="Area" type="CollisionShape2D" parent="Label_cleaner3"]
position = Vector2( 128, 0 )
shape = SubResource( 2 )

[node name="Label_cleaner4" type="Area2D" parent="."]
position = Vector2( 3624, 1080 )
collision_layer = 0

[node name="Area" type="CollisionShape2D" parent="Label_cleaner4"]
position = Vector2( 128, 0 )
shape = SubResource( 2 )

[node name="Label_cleaner5" type="Area2D" parent="."]
position = Vector2( 4480, 832 )
collision_layer = 0

[node name="Area" type="CollisionShape2D" parent="Label_cleaner5"]
position = Vector2( 128, 0 )
shape = SubResource( 2 )
[connection signal="tree_exited" from="." to="." method="_on_Tutorial_tree_exited"]
[connection signal="body_entered" from="Label_cleaner" to="." method="_on_Label_cleaner_body_entered"]
[connection signal="body_entered" from="Label_cleaner2" to="." method="_on_Label_cleaner2_body_entered"]
[connection signal="body_entered" from="Label_cleaner3" to="." method="_on_Label_cleaner3_body_entered"]
[connection signal="body_entered" from="Label_cleaner4" to="." method="_on_Label_cleaner4_body_entered"]
[connection signal="body_entered" from="Label_cleaner5" to="." method="_on_Label_cleaner5_body_entered"]
